--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "private": true,
   "scripts": {
+    "dev": "webpack --watch",
+    "server": "node server.js",
+    "start": "webpack serve --open",
     "build": "webpack --config webpack.config.js",
     "build:prod": "webpack --config webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,9 +23,12 @@
   },
   "homepage": "https://github.com/Jveen-D/webpack5#readme",
   "devDependencies": {
+    "express": "^4.17.3",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
+    "webpack-dev-middleware": "^5.3.1",
+    "webpack-dev-server": "^4.7.4",
     "webpack-manifest-plugin": "^5.0.0"
   },
   "dependencies": {
