--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/Jveen-D/webpack5#readme",
   "devDependencies": {
+    "css-loader": "^6.7.1",
     "express": "^4.17.3",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-middleware": "^5.3.1",
