--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "private": true,
   "scripts": {
+    "profile": "webpack --profile --json > stats.json",
+    "analyzer": "webpack-bundle-analyzer bundle/output/path/stats.json",
     "dev": "webpack --watch",
     "server": "node server.js",
     "start": "webpack serve --open",
@@ -28,6 +30,7 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "webpack": "^5.70.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-middleware": "^5.3.1",
     "webpack-dev-server": "^4.7.4",
