--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "scripts": {
     "profile": "webpack --profile --json > stats.json",
     "analyzer": "webpack-bundle-analyzer bundle/output/path/stats.json",
-    "dev": "webpack --watch",
+    "dev": "webpack --env production=dev --watch",
     "server": "node server.js",
     "start": "webpack serve --open",
     "build": "webpack --config webpack.config.js",
-    "build:prod": "webpack --config webpack.config.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:prod": "webpack --config webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
