--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "profile": "webpack --profile --json > stats.json",
     "analyzer": "webpack-bundle-analyzer bundle/output/path/stats.json",
-    "dev": "webpack --env production=dev --watch",
-    "server": "node server.js",
-    "start": "webpack serve --open",
-    "build": "webpack --config webpack.config.js",
-    "build:prod": "webpack --config webpack.config.prod.js"
+    "dev": "webpack serve --env mode=development --open",
+    "build": "webpack --env mode=development --config webpack.config.js",
+    "build:prod": "webpack --env mode=production --config webpack.config.prod.js",
+    "server": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +27,8 @@
     "express": "^4.17.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.2",
     "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
