--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,25 @@
 {
     "compilerOptions": {
         "outDir": "./dist/",
+        "sourceMap": true,
         "noImplicitAny": true,
         "module": "es6",
         "target": "es5",
         "jsx": "react",
         "allowJs": true,
         "moduleResolution": "node"
-    }
+    },
+    "include": [
+        "tests/**/*.ts",
+        "src/**/*.ts",
+        "src/**/*.d.ts",
+        "src/**/*.tsx",
+        "src/**/*.vue",
+        "types/**/*.d.ts",
+        "types/**/*.ts",
+        "build/**/*.ts",
+        "build/**/*.d.ts",
+        "mock/**/*.ts",
+        "vite.config.ts"
+    ]
 }
