--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "webpack serve --env mode=development --open",
     "build": "webpack --env mode=development --config webpack.config.js",
     "build:prod": "webpack --env mode=production --config webpack.config.prod.js",
-    "server": "node server.js"
+    "server": "http-server dist"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "css-loader": "^6.7.1",
     "express": "^4.17.3",
     "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.0",
     "mini-css-extract-plugin": "^2.6.0",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.2",
